tests/__snapshots__/api-expect-only-fail-stderr.snap.txt
Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  2 | 
  3 | expect<string>().type.toBeString();
  4 | expect.only.fail<string>().type.toBeString();
    |             ~~~~
  5 | 
  6 | expect.only.fail<never>().type.toBeString();
  7 | 

      at ./__typetests__/expect-only-fail.tst.ts:4:13

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  15 |   test("is skipped?", () => {
  16 |     expect<never>().type.toBeVoid();
  17 |     expect.only.fail<string>().type.toBeString();
     |                 ~~~~
  18 | 
  19 |     expect.only.fail<never>().type.toBeVoid();
  20 |   });

       at ./__typetests__/expect-only-fail.tst.ts:17:17

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  29 | test.only("is number?", () => {
  30 |   expect.skip<string>().type.toBeNumber();
  31 |   expect.fail<number>().type.toBeNumber();
     |          ~~~~
  32 | 
  33 |   expect.fail<never>().type.toBeVoid();
  34 | });

       at ./__typetests__/expect-only-fail.tst.ts:31:10

